--- a/wallet.html
+++ b/wallet.html
@@ -95,8 +95,23 @@
                                     <div class="badge"><i class="ripple"></i></div>
                                 </div>
                                 <div class="author-infor">
-                                    <h5 class="style2"><a>Bitget</a></h5>
+                                    <h5 class="style2"><a>Bitget Wallet</a></h5>
                                     <span class="price">Bitget Wallet</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
+                            <div id="bitget" class="sc-author-box select_wallet" data-title="bitget"
+                                data-logo="./assets/images/logo/bitgetlogo.png" style="cursor:pointer;">
+                                <div class="author-avatar">
+                                    <a href="#">
+                                        <img src="assets/images/logo/bittt.png" alt="Image" class="avatar">
+                                    </a>
+                                    <div class="badge"><i class="ripple"></i></div>
+                                </div>
+                                <div class="author-infor">
+                                    <h5 class="style2"><a>Bitget Exchange</a></h5>
+                                    <span class="price">Bitget Exchange</span>
                                 </div>
                             </div>
                         </div>
